Fix lambda cards on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,7 @@
 
   .lambda-card {
     width: 90% !important;
+    padding: 10px 10px !important;
   }
 
   .post-image-container {
